--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <h1>Hello!</h1>
+    <section id="information">information</div>
 <script src="app.js"></script>
 </body>
 </html>
