--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Hello! You are fantastic!</h1>
+    <h1>Hello! You are fantastic!!!</h1>
     <section id="information">information</div>
 <script src="app.js"></script>
 </body>
