fix id and class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello! You are fantastic!!!</h1>
     <h2>* feature/footer</h2>
-    <section id="section information">information</div>
+    <section id="information" class="section information">information</div>
 <script src="app.js"></script>
 </body>
 </html>
