--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Hello! You are fantastic!!!</h1>
-    <h2>* feature/footer</h2>
+    <h2>H2 header</h2>
+    <h3>H3 header</h3>
+    <h4>H4 header</h4>
     <section id="information" class="section information">information</div>
 <script src="app.js"></script>
 </body>
