--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIT</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <h1>Hello! You are fantastic!!!</h1>
-    <h2>H2 header</h2>
-    <h3>H3 header</h3>
-    <h4>H4 header</h4>
-    <section id="information" class="section information">information</div>
-<script src="app.js"></script>
-</body>
-</html>
+<!doctype html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport"s
+           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <title>Todo List</title>
+ </head>
+ <body>
+ <h1>Todo List</h1>
+ <div class="row limiter">
+     <div class="row insert">
+         <input type="text" id="js-insert" placeholder="What needs to be done?">
+     </div>
+     <div class="row bar" id="js-bar">
+         <div class="col-1-4">
+             <span class="total" id="js-total">3 items left</span>
+         </div>
+         <div class="col-1-2">
+             <ul class="filter" id="js-filters">
+                 <li><a href="#/all" class="button selected">All</a></li>
+                 <li><a href="#/active" class="button">Active</a></li>
+                 <li><a href="#/completed" class="button">Completed</a></li>
+             </ul>
+         </div>
+         <div class="col-1-4">
+             <button class="button button--clear" id="js-clear-completed">Clear Completed</button>
+         </div>
+     </div>
+     <div class="row">
+         <ul class="list" id="js-list"></ul>
+     </div>
+     <div class="row">
+         <ul class="list">
+             <li data-id="1614959130076"><div class="todo"><input type="checkbox" class="toggle"><span>To</span><button class="destroy"></button></div><input type="text" class="edit"></li>
+             <li data-id="1614959130902"><div class="todo"><input type="checkbox" class="toggle"><span>do</span><button class="destroy"></button></div><input type="text" class="edit"></li>
+             <li data-id="1614959131349" class="completed"><div class="todo"><input type="checkbox" class="toggle"><span>list</span><button class="destroy"></button></div><input type="text" class="edit"></li>
+             <li data-id="1614959131961"><div class="todo"><input type="checkbox" class="toggle"><span>!</span><button class="destroy"></button></div><input type="text" class="edit"></li>
+         </ul>
+     </div>
+ </div>
+ <script src="app.js"></script>
+ </body>
+ </html>
